force-app/main/default/objects/TE_Collection__c/TE_Collection__c.object-meta.xml
<CustomObject>
    <label>TE Collection</label>
    <nameField>
        <displayFormat>C-{YYYY}-{0000}</displayFormat>
        <label>TE Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TE Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>