force-app/main/default/objects/TE_Collection__c/fields/Bank_Account_Credited__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Credited__c</fullName>
    <label>Bank Account Credited</label>
    <length>50</length>
    <type>Text</type>
</CustomField>