force-app/main/default/objects/TE_Collection__c/fields/Charges_Deducted__c.field-meta.xml
<CustomField>
    <fullName>Charges_Deducted__c</fullName>
    <label>Charges Deducted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>