force-app/main/default/objects/TE_Collection__c/fields/Collection_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Name__c</fullName>
    <label>Collection Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>