force-app/main/default/objects/TE_Collection__c/fields/Date_Credited_to_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Date_Credited_to_Bank_Account__c</fullName>
    <label>Date Credited to Bank Account</label>
    <type>Date</type>
</CustomField>