force-app/main/default/objects/TE_Collection__c/fields/Deduction_Description__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Description__c</fullName>
    <label>Deduction Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>