force-app/main/default/objects/TE_Collection__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TE Collections</relationshipLabel>
    <relationshipName>TE_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>