force-app/main/default/objects/TE_Collection__c/fields/From_Contact__c.field-meta.xml
<CustomField>
    <fullName>From_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TE Collections</relationshipLabel>
    <relationshipName>TE_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>