force-app/main/default/objects/TE_Collection__c/fields/QuickBooks_Desktop_List_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Desktop_List_Id__c</fullName>
    <label>QuickBooks Desktop List Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>